no, still i didn't...

--- a/Python/AstroNote.ipynb
+++ b/Python/AstroNote.ipynb
@@ -1505,7 +1505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": 407,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1525,7 +1525,7 @@
     "    Mean_Ecl_Longitude_Sun = Coordinates[4]\n",
     "    Ecl_Longitude_Sun = Coordinates[5]\n",
     "    \n",
-    "    # Calculate H\n",
+    "    # Calculation of H\n",
     "    #LHA = 90 + \\\n",
     "    #     Orbit_Dict[Planet + \"H\"][0] * np.sin(np.radians(Ecl_Longitude_Sun)) * np.tan(np.radians(Latitude)) + \\\n",
     "    #     Orbit_Dict[Planet + \"H\"][1] * np.sin(np.radians(Ecl_Longitude_Sun))**3 * np.tan(np.radians(Latitude)) * \\\n",
@@ -1561,7 +1561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 347,
+   "execution_count": 467,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1635,9 +1635,13 @@
     "                                           Longitude,\n",
     "                                           Altitude_Of_Sun,\n",
     "                                           J_Time=J_Rise)\n",
-    "\n",
     "        # LHA = -H < 0 corresponds to sunrise\n",
-    "        J_Rise_Corr = (-(360-LHA) + LHA_t) / 360 * Orbit_Dict[Planet + \"J\"][3]\n",
+    "        LHA = Normalize_Symmetrically_Bounded_PI(LHA)\n",
+    "        if(LHA < 0):\n",
+    "            LHA *= -1\n",
+    "        elif(LHA >= 0):\n",
+    "            pass\n",
+    "        J_Rise_Corr = (-LHA + LHA_t) / 360 * Orbit_Dict[Planet + \"J\"][3]\n",
     "        J_Rise -= J_Rise_Corr\n",
     "\n",
     "        # Sunset\n",
@@ -1654,9 +1658,12 @@
     "                                           Longitude,\n",
     "                                           Altitude_Of_Sun,\n",
     "                                           J_Time=J_Set)\n",
-    "        LHA, _ = Normalize_Zero_Bounded(LHA, 360)\n",
-    "\n",
-    "        # LHA = -H < 0 corresponds to sunrise\n",
+    "        # LHA = H > 0 corresponds to sunset\n",
+    "        LHA = Normalize_Symmetrically_Bounded_PI(LHA)\n",
+    "        if(LHA < 0):\n",
+    "            LHA *= -1\n",
+    "        elif(LHA >= 0):\n",
+    "            pass\n",
     "        J_Set_Corr = (LHA - LHA_t) / 360 * Orbit_Dict[Planet + \"J\"][3]\n",
     "        J_Set -= J_Set_Corr\n",
     "\n",
@@ -1675,7 +1682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 468,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1698,14 +1705,15 @@
     "    #\n",
     "    # SUNRISE\n",
     "    #\n",
-    "    Sunrise_Universal_Time = (J_Rise - 0.5 - int(J_Rise)) * 24\n",
+    "    J_Rise -= 0.5\n",
+    "    Sunrise_Universal_Time = (J_Rise - int(J_Rise)) * 24\n",
     "\n",
-    "    print(\"rise:\", Sunrise_Universal_Time)\n",
+    "    print(\"Sunrise UTC: {0}\".format(datetime.timedelta(hours=Sunrise_Universal_Time)))\n",
     "    Sunrise_Universal_Date_Time = Normalize_Time_Parameters(Sunrise_Universal_Time,\n",
     "                                                            Local_Date_Year,\n",
     "                                                            Local_Date_Month,\n",
     "                                                            Local_Date_Day)\n",
-    "    \n",
+    "\n",
     "    # Convert results to Local Time\n",
     "    Sunrise_Local_Date_Time = UT_To_LT(Longitude,\n",
     "                                       Sunrise_Universal_Date_Time[0],\n",
@@ -1716,9 +1724,10 @@
     "    #\n",
     "    # SUNSET\n",
     "    #\n",
-    "    Sunset_Universal_Time = (J_Set - 0.5 - int(J_Set)) * 24\n",
+    "    J_Set -= 0.5\n",
+    "    Sunset_Universal_Time = (J_Set - int(J_Set)) * 24\n",
     "\n",
-    "    print(\"set:\", Sunset_Universal_Time)\n",
+    "    print(\"Sunset UTC: {0}\".format(datetime.timedelta(hours=Sunset_Universal_Time)))\n",
     "    Sunset_Universal_Date_Time = Normalize_Time_Parameters(Sunset_Universal_Time,\n",
     "                                                           Local_Date_Year,\n",
     "                                                           Local_Date_Month,\n",
@@ -1744,7 +1753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": 469,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1763,15 +1772,15 @@
     "                                                                                   Local_Date_Month=Local_Date_Month,\n",
     "                                                                                   Local_Date_Day=Local_Date_Day,\n",
     "                                                                                   Altitude_Of_Sun=Altitude_Of_Sun)\n",
-    "    \n",
+    "\n",
     "    Sunrise = Sunrise_Local_Date_Time[0]\n",
     "    Sunset = Sunset_Local_Date_Time[0]\n",
     "\n",
-    "    print('Sun\\'s setting at altitude {0}° on {1}.{2}.{3} is at {4}'.format(Altitude_Of_Sun,\n",
-    "                                                                            int(Sunrise_Local_Date_Time[1]),\n",
-    "                                                                            int(Sunrise_Local_Date_Time[2]),\n",
-    "                                                                            int(Sunrise_Local_Date_Time[3]),\n",
-    "                                                                            str(datetime.timedelta(hours=Sunrise))))\n",
+    "    print('Sun\\'s rising at altitude {0}° on {1}.{2}.{3} is at {4}'.format(Altitude_Of_Sun,\n",
+    "                                                                           int(Sunrise_Local_Date_Time[1]),\n",
+    "                                                                           int(Sunrise_Local_Date_Time[2]),\n",
+    "                                                                           int(Sunrise_Local_Date_Time[3]),\n",
+    "                                                                           str(datetime.timedelta(hours=Sunrise))))\n",
     "\n",
     "    print('Sun\\'s setting at altitude {0}° on {1}.{2}.{3} is at {4}'.format(Altitude_Of_Sun,\n",
     "                                                                            int(Sunset_Local_Date_Time[1]),\n",
@@ -1782,7 +1791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": 476,
    "metadata": {
     "scrolled": false
    },
@@ -1791,17 +1800,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "rise: 5.261057328432798\n",
-      "set: -5.745499134063721\n",
-      "Sun's setting at altitude 0° on 2004.4.1 is at 5:15:39.806382\n",
-      "Sun's setting at altitude 0° on 2004.4.0 is at 18:15:16.203117\n"
+      "Sunrise UTC: 5:15:39.806382\n",
+      "Sunset UTC: 18:15:16.203117\n",
+      "Sun's rising at altitude 0° on 2004.4.1 is at 5:15:39.806382\n",
+      "Sun's setting at altitude 0° on 2004.4.1 is at 18:15:16.203117\n"
      ]
     }
    ],
    "source": [
     "Local_Time_for_Sun_at_Altitude(Planet='Earth',\n",
-    "                               Latitude=52,\n",
-    "                               Longitude=-5,\n",
+    "                               Latitude=52,#Location_Dict['Budapest'][0],\n",
+    "                               Longitude=-5,#Location_Dict['Budapest'][1],\n",
     "                               Local_Date_Year=2004,\n",
     "                               Local_Date_Month=4,\n",
     "                               Local_Date_Day=1,\n",
@@ -1810,7 +1819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 358,
+   "execution_count": 477,
    "metadata": {},
    "outputs": [
     {
@@ -1823,17 +1832,18 @@
     }
    ],
    "source": [
-    "Right_Ascension_Sun, \\\n",
-    "Declination_Sun,     \\\n",
-    "Mean_Anomaly,        \\\n",
-    "Equation_Of_Center,  \\\n",
-    "Ecl_Longitude_Sun,   \\\n",
-    "Mean_Ecl_Longitude_Sun = Coordinates_Of_Sun(Planet='Earth',\n",
-    "                                            JD=Calculate_JD(Date_Year=2019,\n",
-    "                                                            Date_Month=8,\n",
-    "                                                            Date_Day=25,\n",
-    "                                                            Longitude=19.0402,\n",
-    "                                                            Local_Time=(11 + 33/60)))\n",
+    "Coordinates = Coordinates_Of_Sun(Planet='Earth',\n",
+    "                                 JD=Calculate_JD(Date_Year=2019,\n",
+    "                                                 Date_Month=8,\n",
+    "                                                 Date_Day=25,\n",
+    "                                                 Longitude=19.0402,\n",
+    "                                                 Local_Time=(11 + 33/60)))\n",
+    "Right_Ascension_Sun = Coordinates[0]\n",
+    "Declination_Sun = Coordinates[1]\n",
+    "Mean_Anomaly = Coordinates[2]\n",
+    "Equation_Of_Center = Coordinates[3]\n",
+    "Mean_Ecl_Longitude_Sun = Coordinates[4]\n",
+    "Ecl_Longitude_Sun = Coordinates[5]\n",
     "\n",
     "print(\"Right Ascension of Sun: \" +\n",
     "      str(int(Right_Ascension_Sun)) + \"° \" +\n",
