added some trailing updates

--- a/Python/AstroNote.ipynb
+++ b/Python/AstroNote.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,21 +65,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
-    "import math\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
     "import datetime\n",
+    "import numpy as np\n",
+    "\n",
+    "import seaborn as sns\n",
+    "import matplotlib as mpl\n",
+    "import matplotlib.cm as cm\n",
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.ticker as mticker\n",
+    "from mpl_toolkits.axes_grid1 import make_axes_locatable\n",
+    "\n",
     "from IPython.display import clear_output"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Just some matplotlib and seaborn parameter tuning"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = './data/'\n",
+    "out = './out/'\n",
+    "figsave_format = 'png'\n",
+    "figsave_dpi = 200\n",
+    "\n",
+    "axistitlesize = 20\n",
+    "axisticksize = 17\n",
+    "axislabelsize = 26\n",
+    "axislegendsize = 23\n",
+    "axistextsize = 20\n",
+    "axiscbarfontsize = 15\n",
+    "\n",
+    "# Set axtick dimensions\n",
+    "major_size = 6\n",
+    "major_width = 1.2\n",
+    "minor_size = 3\n",
+    "minor_width = 1\n",
+    "mpl.rcParams['xtick.major.size'] = major_size\n",
+    "mpl.rcParams['xtick.major.width'] = major_width\n",
+    "mpl.rcParams['xtick.minor.size'] = minor_size\n",
+    "mpl.rcParams['xtick.minor.width'] = minor_width\n",
+    "mpl.rcParams['ytick.major.size'] = major_size\n",
+    "mpl.rcParams['ytick.major.width'] = major_width\n",
+    "mpl.rcParams['ytick.minor.size'] = minor_size\n",
+    "mpl.rcParams['ytick.minor.width'] = minor_width\n",
+    "\n",
+    "mpl.rcParams.update({'figure.autolayout': False})\n",
+    "\n",
+    "# Seaborn style settings\n",
+    "sns.set_style({'axes.axisbelow': True,\n",
+    "               'axes.edgecolor': '.8',\n",
+    "               'axes.facecolor': 'white',\n",
+    "               'axes.grid': True,\n",
+    "               'axes.labelcolor': '.15',\n",
+    "               'axes.spines.bottom': True,\n",
+    "               'axes.spines.left': True,\n",
+    "               'axes.spines.right': True,\n",
+    "               'axes.spines.top': True,\n",
+    "               'figure.facecolor': 'white',\n",
+    "               'font.family': ['sans-serif'],\n",
+    "               'font.sans-serif': ['Arial',\n",
+    "                'DejaVu Sans',\n",
+    "                'Liberation Sans',\n",
+    "                'Bitstream Vera Sans',\n",
+    "                'sans-serif'],\n",
+    "               'grid.color': '.8',\n",
+    "               'grid.linestyle': '--',\n",
+    "               'image.cmap': 'rocket',\n",
+    "               'lines.solid_capstyle': 'round',\n",
+    "               'patch.edgecolor': 'w',\n",
+    "               'patch.force_edgecolor': True,\n",
+    "               'text.color': '.15',\n",
+    "               'xtick.bottom': True,\n",
+    "               'xtick.color': '.15',\n",
+    "               'xtick.direction': 'in',\n",
+    "               'xtick.top': True,\n",
+    "               'ytick.color': '.15',\n",
+    "               'ytick.direction': 'in',\n",
+    "               'ytick.left': True,\n",
+    "               'ytick.right': True})\n",
+    "\n",
+    "# Colorpalettes, colormaps, etc.\n",
+    "sns.set_palette(palette='rocket')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,6 +453,26 @@
    "source": [
     "## Time related calculations\n",
     "### Normalize time parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.timedelta(days=32)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datetime.datetime datetime.timedelta(days=32)"
    ]
   },
   {
@@ -1792,9 +1896,7 @@
   {
    "cell_type": "code",
    "execution_count": 476,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1920,9 +2022,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
